--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,12 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
     "@vendia/serverless-express": "4.10.4",
     "body-parser": "1.20.2",
     "express": "4.18.2",
-    "redis": "4.6.7",
+    "redis": "^4.6.7",
     "ts-node": "10.9.1"
   }
 }
