--- a/backend/package.json
+++ b/backend/package.json
@@ -5,21 +5,24 @@
   "main": "lambda.ts",
   "scripts": {
     "start": "ts-node local.ts",
-    "test": "ts-node test.ts"
+    "test": "ts-jest test.ts"
   },
   "private": true,
   "devDependencies": {
     "@types/body-parser": "1.19.2",
     "@types/express": "4.17.17",
+    "@types/jest": "^29.5.4",
+    "@types/supertest": "^2.0.12",
     "eslint-config-prettier": "9.0.0",
     "eslint-config-standard-with-typescript": "37.0.0",
+    "jest": "^29.7.0",
     "prettier": "3.0.1",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "5.1.6"
   },
   "dependencies": {
     "@types/redis": "^4.0.11",
-    "@types/supertest": "^2.0.12",
     "@vendia/serverless-express": "4.10.4",
     "body-parser": "1.20.2",
     "express": "4.18.2",
